<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvForPas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/forgotPasswordText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmailFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvForPas"
        app:layout_constraintTop_toBottomOf="@id/tvForPas" />

    <EditText
        android:id="@+id/etEmailForPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_btn_search"
        android:text="@string/resetLink"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/etEmailForPass"
        app:layout_constraintTop_toBottomOf="@id/etEmailForPass" />

</androidx.constraintlayout.widget.ConstraintLayout>