<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvCom"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_comm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:background="@drawable/bg_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCom">

        <EditText
            android:id="@+id/etAddTextEditCom"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="10dp"
            android:gravity="top|start"
            android:background="@drawable/bg_layout"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddTextEditCom">

            <RadioButton
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/bg_layout_green"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:paddingHorizontal="16dp"
                android:paddingStart="2dp"
                android:text="@string/positive"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddText"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/bg_layout_red"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:paddingHorizontal="20dp"
                android:paddingStart="2dp"
                android:text="@string/negative"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/positive"
                tools:ignore="RtlSymmetry" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSaveEditCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_btn_send"
            android:text="@string/save"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/radios" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>